--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ div.subtitle {
     height: 100%;
     min-height: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     border-right: 1px solid #aaa;
     position: relative;
 }
